--- a/recognition/src/CMakeLists.txt
+++ b/recognition/src/CMakeLists.txt
@@ -13,7 +13,7 @@ target_link_libraries(RubiksCubeApp
     PRIVATE 
     detector            
     preprocessor
-    classifer
+    classifier
     ${OpenCV_LIBS}
 )
 
